# basecamp_poll

./: db.sqlite3  manage.py  pyproject.toml
assets/css/: StripeElements.css
assets/js/: stripe.js  stripe2.js
basecamp_poll/: asgi.py  settings.py  urls.py  views.py  wsgi.py
polls/: forms.py  models.py  urls.py  utils.py  views.py
polls/migrations/: 0001_initial.py
staticfiles/: staticfiles.json
staticfiles/css/: StripeElements.156263dda439.css  StripeElements.d0be76bad02f.css
staticfiles/js/: stripe.0d962fa3daef.js  stripe.a49f941cc4cd.js  stripe.c1ddfbb7b515.js  stripe2.878e82955ff8.js
templates/: base.html  home.html
templates/polls/: new_poll.html
templates/users/: complete.html  upgrade.html
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20200712_1725.py
